--- a/thanks.html
+++ b/thanks.html
@@ -16,32 +16,28 @@
 				<p class="inline">Get more stuff like this:</p>
 				<form class="inline">
 					<input type="text" placeholder="abc@example.com">
-					<button type="submit">Sign me up</button>
+					<button type="submit" class="btn">Sign me up</button>
 				</form>
 			</div>
 		</div>
 	</div>
-	<div class="row" id="header">
-		<div class="col-xs-12">
-			<h2 class="fancy-header">George Osborne Presents</h2>
-			<h1>Frack a Mole</h1>
+	<div class="row">
+		<div class="col-xs-12 col-sm-8">
+			<div class="center">
+				<h2 class="fancy-header">Well done George!</h2>
+				<h1>Frack a Mole</h1>
+			</div>
 		</div>
+		<div class="col-xs-12 col-sm-3">
+			<div>
+				<img src="images/george-osborne-looking-evil.png">
+			</div>
+		</div>
+		<div class="one column">&nbsp;</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-2">&nbsp;</div>
-		<div class="col-xs-8">
-			<p>INTRO TEXT</p>
-		</div>
-		<div class="col-xs-2"></div>
 	</div>
-	<div class="row">
-		<div class="col-xs-12 play-button">
-			<a href="frack-a-mole.html" class="button">PLAY</a>
-		</div>
-	</div>
-	<div class="row">
 
-	</div>
 </div>
 </body>
 </html>
