Layouts fixing for pages, background image

--- a/final.html
+++ b/final.html
@@ -23,10 +23,11 @@
 	</div>
 	<div class="row">
 		<div class="col-xs-12 col-sm-8">
-			<div class="center">
+			<div class="text-center">
 				<h2 class="fancy-header">Well done George!</h2>
 				<h1>Frack a Mole</h1>
 			</div>
+				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad mi</p>
 		</div>
 		<div class="col-xs-12 col-sm-3">
 			<div>
@@ -36,6 +37,11 @@
 		<div class="one column">&nbsp;</div>
 	</div>
 	<div class="row">
+		<div class="col-xs-12 text-center">
+			<a class="btn btn-default" href="#" role="button">Share on Facebook</a>
+			<a class="btn btn-default" href="#" role="button">Share on Twitter</a>
+
+		</div>
 	</div>
 
 </div>
