--- a/intro.html
+++ b/intro.html
@@ -21,22 +21,24 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="row" id="header">
 		<div class="col-xs-12">
 			<h2 class="fancy-header">George Osborne Presents</h2>
 			<h1>Frack a Mole</h1>
 		</div>
 	</div>
+	
 	<div class="row">
-		<div class="col-xs-2">&nbsp;</div>
-		<div class="col-xs-8">
-			<p>INTRO TEXT</p>
+
+		<div class="col-xs-12 col-sm-8 col-sm-offset-2">
+			<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad mi</p>
 		</div>
-		<div class="col-xs-2"></div>
+
 	</div>
 	<div class="row">
 		<div class="col-xs-12 play-button">
-			<a href="index.html" class="button">PLAY</a>
+			<a href="index.html" class="btn btn-default">PLAY</a>
 		</div>
 	</div>
 	<div class="row">
