Home page updated

--- a/final.html
+++ b/final.html
@@ -9,18 +9,18 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
 </head>
 <body>
-<div class="container">
-	<div class="row" id="top-bar">
-		<div class="col-xs-12" style="text-align: right;">
-			<div class="inline">
-				<p class="inline">Get more stuff like this:</p>
-				<form class="inline">
-					<input type="text" placeholder="abc@example.com">
-					<button type="submit" class="btn">Sign me up</button>
-				</form>
-			</div>
-		</div>
+
+<div class="transparent-background" style="text-align: right;">
+	<div class="inline">
+		<p class="inline">Get more stuff like this:</p>
+		<form class="inline">
+			<input type="text" placeholder="abc@example.com">
+			<button type="submit">Sign me up</button>
+		</form>
 	</div>
+</div>
+	
+<div class="container">
 	<div class="row">
 		<div class="col-xs-12 col-sm-8">
 			<div class="text-center">
