--- a/index.html
+++ b/index.html
@@ -9,34 +9,36 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
 </head>
 <body>
-<div class="container">
-	<div class="row" id="top-bar">
-		<div class="col-xs-12" style="text-align: right;">
-			<div class="inline">
-				<p class="inline">Get more stuff like this:</p>
-				<form class="inline">
-					<input type="text" placeholder="abc@example.com">
-					<button type="submit">Sign me up</button>
-				</form>
-			</div>
-		</div>
+<div class="transparent-background" style="text-align: right;">
+	<div class="inline">
+		<p class="inline">Get more stuff like this:</p>
+		<form class="inline">
+			<input type="text" placeholder="abc@example.com">
+			<button type="submit">Sign me up</button>
+		</form>
 	</div>
-	<div class="row" id="header">
-		<div class="col-xs-12">
+</div>
+	
+<div class="container">
+
+
+	<div class="row top-buffer" id="header">
+		<div class="col-xs-12 col-sm-4 col-sm-offset-4 transparent-background">
 			<h2 class="fancy-header">George Osborne Presents</h2>
 			<h1>Frack a Mole</h1>
 		</div>
 	</div>
-	<div class="row">
-		<div class="col-xs-2">&nbsp;</div>
-		<div class="col-xs-8">
-			<p>INTRO TEXT</p>
+	
+	<div class="row top-buffer">
+
+		<div class="col-xs-12 col-sm-8 col-sm-offset-2 transparent-background">
+			<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad mi</p>
 		</div>
-		<div class="col-xs-2"></div>
+
 	</div>
-	<div class="row">
-		<div class="col-xs-12 play-button">
-			<a href="frack-a-mole.html" class="button">PLAY</a>
+	<div class="row top-buffer">
+		<div class="col-xs-12 col-sm-2 col-sm-offset-5 play-button">
+			<a href="frack-a-mole.html" class="btn btn-success" style="font-size: 300%;">PLAY</a>
 		</div>
 	</div>
 	<div class="row">
