--- a/frack-a-mole.html
+++ b/frack-a-mole.html
@@ -10,6 +10,16 @@
 
 </head>
 <body>
+	<div class="transparent-background" style="text-align: right;">
+		<div class="inline">
+			<p class="inline">Get more stuff like this:</p>
+			<form action="https://frack-a-mole.us10.list-manage.com/subscribe/post?u=752ae435f6fadd5484ece4ede&amp;id=31190f5677" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate inline" target="_blank" novalidate>
+				<input type="email" name="EMAIL" placeholder="abc@example.com">
+				<button type="submit">Sign me up</button>
+			</form>
+		</div>
+	</div>
+		
 	<div class="container">
 
 		<div class="row">
