--- a/final.html
+++ b/final.html
@@ -13,12 +13,13 @@
 <div class="transparent-background" style="text-align: right;">
 	<div class="inline">
 		<p class="inline">Get more stuff like this:</p>
-		<form class="inline">
-			<input type="text" placeholder="abc@example.com">
+		<form action="https://frack-a-mole.us10.list-manage.com/subscribe/post?u=752ae435f6fadd5484ece4ede&amp;id=31190f5677" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate inline" target="_blank" novalidate>
+			<input type="email" name="EMAIL" placeholder="abc@example.com">
 			<button type="submit">Sign me up</button>
 		</form>
 	</div>
 </div>
+
 
 <div class="container">
 	<div class="row">
@@ -45,5 +46,15 @@
 	</div>
 
 </div>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-59193957-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
