--- a/frack-a-mole.html
+++ b/frack-a-mole.html
@@ -1,38 +1,39 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Frack-A-Mole</title>
+<meta charset="UTF-8">
+	<TITLE>Frack-a-Mole: Squash dissent while maximising profits!</TITLE>
+<META NAME="Title" CONTENT="Frack-a-Mole: Squash dissent while maximising profits!">
+<META NAME="Author" CONTENT="HackChange">
+<META NAME="Description" CONTENT="Time to squash local protests and ignore environmental concerns, while generating profits for your cronies - time for Frack-A-Mole!">
+<META NAME="Keywords" CONTENT="fracking, frack, UK, protest, climate change, George Osborne, Cuadrilla">
+<META HTTP-EQUIV="Content-Language" CONTENT="en">
+<META HTTP-EQUIV="Creation-Date" CONTENT="30-01-2015">
+<META HTTP-EQUIV="Version" CONTENT="0.1">
+<BASE HREF="http://www.frack-a-mole.co.uk">
+<META HTTP-EQUIV="Page URL" CONTENT="www.frack-a-mole.co.uk">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 </head>
 <body>
 	<div class="container">
-
 		<div class="row">
-
 			<div class="col-xs-6">
 				<h1>Frack-A-Mole</h1>
-				</div>
+			</div>
 			<div class="col-xs-6">
 				<h4>Score: <strong id="score">0</strong>&nbsp;points</h4>
 				<input type="button" value="Start" onclick="frackamole.newGame();" />
 				<input type="button" value="Reset" onclick="frackamole.resetGame();" />
 			</div>
-			
 			<div class="col-xs-12">
 				<div id="map"></div>
 			</div>
-
 		</div>
-
-
 	</div>
-
 	<script type="text/javascript" src="js/game.js"></script>
-
 </body>
 </html>
