--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Frack-A-Mole</title>
+<meta charset="UTF-8">
+	<TITLE>Frack-a-Mole: Squash dissent while maximising profits!</TITLE>
+<META NAME="Title" CONTENT="Frack-a-Mole: Squash dissent while maximising profits!">
+<META NAME="Author" CONTENT="HackChange">
+<META NAME="Description" CONTENT="Time to squash local protests and ignore environmental concerns, while generating profits for your cronies - time for Frack-A-Mole!">
+<META NAME="Keywords" CONTENT="fracking, frack, UK, protest, climate change, George Osborne, Cuadrilla">
+<META HTTP-EQUIV="Content-Language" CONTENT="en">
+<META HTTP-EQUIV="Creation-Date" CONTENT="30-01-2015">
+<META HTTP-EQUIV="Version" CONTENT="0.1">
+<META HTTP-EQUIV="Page URL" CONTENT="www.frack-a-mole.co.uk">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css" media="all" />
@@ -10,39 +18,49 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 </head>
 <body>
-<div class="container">
-	<div class="row" id="top-bar">
-		<div class="col-xs-12" style="text-align: right;">
-			<div class="inline">
-				<p class="inline">Get more stuff like this:</p>
-				<form class="inline">
-					<input type="text" placeholder="abc@example.com">
-					<button type="submit">Sign me up</button>
-				</form>
+	<div class="container">
+		<div class="row" id="top-bar">
+			<div class="col-xs-12" style="text-align: right;">
+				<div class="inline">
+					<p class="inline">Get more stuff like this:</p>
+					<form class="inline">
+						<input type="text" placeholder="abc@example.com">
+						<button type="submit">Sign me up</button>
+					</form>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="row" id="header">
-		<div class="col-xs-12">
-			<h2 class="fancy-header">George Osborne Presents</h2>
-			<h1>Frack a Mole</h1>
+		<div class="row" id="header">
+			<div class="col-xs-12">
+				<h2 class="fancy-header">George Osborne Presents</h2>
+				<h1>Frack a Mole</h1>
+				<br><br>
+			</div>
 		</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-2">&nbsp;</div>
-		<div class="col-xs-8">
-			<p>INTRO TEXT</p>
-		</div>
-		<div class="col-xs-2"></div>
-	</div>
-	<div class="row">
-		<div class="col-xs-12 play-button">
-			<a href="frack-a-mole.html" class="button">PLAY</a>
-		</div>
-	</div>
-	<div class="row">
+		<div class="row">
+			<div class="col-xs-2">&nbsp;</div>
+			<div class="col-xs-8 text-center">
+				<p>
+				Public protests against fracking are popping up all over the UK. 
+				Can you help George Osborne beat them back so that he can stay in favour
+				with his wealthy buddies at Caudrilla - the firm leading the way in UK 
+				fracking development?
+				</p>
+				<p>
+				<strong>Frack yeah!</strong>
+				</p>
+				</div>
+				<div class="col-xs-2"></div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12 play-button">
+				<br>
+					<h2><a href="/frack-a-mole.html" class="button">PLAY</a></h2>
+				</div>
+			</div>
+			<div class="row">
 
-	</div>
-</div>
-</body>
-</html>
+			</div>
+		</div>
+	</body>
+	</html>
