Removed spare page, removed html suffixes on page urls

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<div class="row">
 				<div class="col-xs-12 play-button">
 				<br>
-					<h2><a href="/frack-a-mole.html" class="button">PLAY</a></h2>
+					<h2><a href="/frack-a-mole" class="button">PLAY</a></h2>
 				</div>
 			</div>
 			<div class="row">
