--- a/index.html
+++ b/index.html
@@ -18,49 +18,51 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 </head>
 <body>
-	<div class="container">
-		<div class="row" id="top-bar">
-			<div class="col-xs-12" style="text-align: right;">
-				<div class="inline">
-					<p class="inline">Get more stuff like this:</p>
-					<form class="inline">
-						<input type="text" placeholder="abc@example.com">
-						<button type="submit">Sign me up</button>
-					</form>
-				</div>
-			</div>
-		</div>
-		<div class="row" id="header">
-			<div class="col-xs-12">
-				<h2 class="fancy-header">George Osborne Presents</h2>
-				<h1>Frack a Mole</h1>
-				<br><br>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-2">&nbsp;</div>
-			<div class="col-xs-8 text-center">
-				<p>
-				Public protests against fracking are popping up all over the UK. 
-				Can you help George Osborne beat them back so that he can stay in favour
-				with his wealthy buddies at Caudrilla - the firm leading the way in UK 
-				fracking development?
-				</p>
-				<p>
-				<strong>Frack yeah!</strong>
-				</p>
-				</div>
-				<div class="col-xs-2"></div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12 play-button">
-				<br>
-					<h2><a href="/frack-a-mole" class="button">PLAY</a></h2>
-				</div>
-			</div>
-			<div class="row">
+<div class="transparent-background" style="text-align: right;">
+	<div class="inline">
+		<p class="inline">Get more stuff like this:</p>
+		<form action="https://frack-a-mole.us10.list-manage.com/subscribe/post?u=752ae435f6fadd5484ece4ede&amp;id=31190f5677" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate inline" target="_blank" novalidate>
+			<input type="email" name="EMAIL" placeholder="abc@example.com">
+			<button type="submit" class="btn btn-primary">Sign me up</button>
+		</form>
+	</div>
+</div>
+	
+<div class="container">
 
-			</div>
+
+	<div class="row top-buffer" id="header">
+		<div class="col-xs-12 col-sm-4 col-sm-offset-4 transparent-background padded">
+			<h2 class="fancy-header">George Osborne Presents</h2>
+			<h1>Frack a Mole</h1>
 		</div>
-	</body>
-	</html>
+	</div>
+	
+	<div class="row top-buffer">
+
+		<div class="col-xs-12 col-sm-8 col-sm-offset-2 transparent-background padded">
+			<p>Public protests against fracking are popping up all over the UK. Can you help George Osborne beat them back so that he can stay in favour with his wealthy buddies at Cuadrilla - the firm leading the way in UK fracking development?</p>
+		</div>
+
+	</div>
+	<div class="row top-buffer">
+		<div class="col-xs-12 col-sm-2 col-sm-offset-5 play-button">
+			<a href="frack-a-mole.html" class="btn btn-success" style="font-size: 500%;">PLAY</a>
+		</div>
+	</div>
+	<div class="row">
+
+	</div>
+</div>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-59193957-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+</body>
+</html>
