--- a/frack-a-mole.html
+++ b/frack-a-mole.html
@@ -25,7 +25,17 @@
 					<h2 class="pull-left">
 						Score: <strong id="score">0</strong>&nbsp;points
 					</h2>
+					<div id="time">
+						<div id="timer-label">
+							<span>Time: </span>
+						</div>
+						<div class="progress" id="timer">
+						  <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+						  </div>
+						</div>
+					</div>
 				</div>
+				
 			</div>
 		</div>
 	</div>
