Updated image files

--- a/frack-a-mole.html
+++ b/frack-a-mole.html
@@ -20,8 +20,10 @@
 <body>
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
+			<div class="col-xs-12 col-sm-8 col-sm-offset-2">
 				<div id="map">
+				<!-- <div> -->
+				<!-- <img class="img-responsive center-block" src="/images/UKFrackingMapwithHoles.png"> -->
 					<h2 class="pull-left">
 						Score: <strong id="score">0</strong>&nbsp;points
 					</h2>
@@ -46,12 +48,12 @@
 	        $('<img/>')[0].src = this;
 	    });
 	}
-	$(['images/People1.png','images/People2.png','images/People3.png', 
-	  'images/People4.png','images/People5.png','images/People6.png',
-	  'images/People7.png','images/People8.png','images/People9.png',
-	  'images/People10.png','Splat1.png','Splat2.png','Splat3.png','Splat4.png',
-	  'Splat5.png','Splat6.png','Splat7.png','Splat8.png','Splat9.png',
-	  'Splat10.png']).preload();
-  </script>
+	$(['images/Group1.png','images/Group2.png','images/Group3.png', 
+	  'images/Group4.png','images/Group5.png','images/Group6.png',
+	  'images/Group7.png','images/Group8.png','images/Group9.png',
+	  'images/Group10.png','Group1_splat1.png','Group2_splat.png','Group3_splat.png','Group4_splat.png',
+	  'Group5_splat.png','Group6_splat.png','Group7_splat.png','Group8_splat.png','Group9_splat.png',
+	  'Group10_splat.png']).preload();
+ </script>
 </body>
 </html>
