--- a/frack-a-mole.html
+++ b/frack-a-mole.html
@@ -22,8 +22,6 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-8 col-sm-offset-2">
 				<div id="map">
-				<!-- <div> -->
-				<!-- <img class="img-responsive center-block" src="/images/UKFrackingMapwithHoles.png"> -->
 					<h2 class="pull-left">
 						Score: <strong id="score">0</strong>&nbsp;points
 					</h2>
@@ -51,9 +49,9 @@
 	$(['images/Group1.png','images/Group2.png','images/Group3.png', 
 	  'images/Group4.png','images/Group5.png','images/Group6.png',
 	  'images/Group7.png','images/Group8.png','images/Group9.png',
-	  'images/Group10.png','Group1_splat1.png','Group2_splat.png','Group3_splat.png','Group4_splat.png',
-	  'Group5_splat.png','Group6_splat.png','Group7_splat.png','Group8_splat.png','Group9_splat.png',
-	  'Group10_splat.png']).preload();
+	  'images/Group10.png','images/Group1_splat.png','images/Group2_splat.png','images/Group3_splat.png','images/Group4_splat.png',
+	  'images/Group5_splat.png','images/Group6_splat.png','images/Group7_splat.png','images/Group8_splat.png','images/Group9_splat.png',
+	  'images/Group10_splat.png']).preload();
  </script>
 </body>
 </html>
