--- a/frack-a-mole.html
+++ b/frack-a-mole.html
@@ -22,6 +22,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-8 col-sm-offset-2">
 				<div id="map">
+				<!-- <img id='map'src='../images/UKFrackingMapwithHoles.png'> -->
 					<h2 class="pull-left">
 						Score: <strong id="score">0</strong>&nbsp;points
 					</h2>
@@ -34,7 +35,7 @@
 						  </div>
 						</div>
 					</div>
-				</div>
+				<!-- </div> -->
 				
 			</div>
 		</div>
