--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <META HTTP-EQUIV="Creation-Date" CONTENT="30-01-2015">
 <META HTTP-EQUIV="Version" CONTENT="0.1">
 <META HTTP-EQUIV="Page URL" CONTENT="www.frack-a-mole.co.uk">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css" media="all" />
