--- a/thanks.html
+++ b/thanks.html
@@ -3,6 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Frack-A-Mole</title>
+	<META NAME="Title" CONTENT="Frack-a-Mole: Squash dissent while maximising profits!">
+<META NAME="Author" CONTENT="HackChange">
+<META NAME="Description" CONTENT="Time to squash local protests and ignore environmental concerns, while generating profits for your cronies - time for Frack-A-Mole!">
+<META NAME="Keywords" CONTENT="fracking, frack, UK, protest, climate change, George Osborne, Cuadrilla">
+<META HTTP-EQUIV="Content-Language" CONTENT="en">
+<META HTTP-EQUIV="Creation-Date" CONTENT="30-01-2015">
+<META HTTP-EQUIV="Version" CONTENT="0.1">
+<META HTTP-EQUIV="Page URL" CONTENT="www.frack-a-mole.co.uk">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css" media="all" />
