Added bit of time, removed email form for now

--- a/thanks.html
+++ b/thanks.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 	<div class="container">
-		<div class="row" id="top-bar">
+<!-- 		<div class="row" id="top-bar">
 			<div class="col-xs-12" style="text-align: right;">
 				<div class="inline">
 					<p class="inline">Get more stuff like this:</p>
@@ -31,7 +31,7 @@
 					</form>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<div class="row">
 			<div class="col-xs-12 col-sm-8">
 				<div class="transparent-background padded">
@@ -145,7 +145,7 @@
 						<div class="panel-heading" role="tab" id="headingSeven">
 							<h4 class="panel-title">
 								<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-									The ‘nannas’ of lancashire
+									The ‘nannas’ of Lancashire
 								</a>
 							</h4>
 						</div>
