Updated lots of things

--- a/thanks.html
+++ b/thanks.html
@@ -34,7 +34,7 @@
 		</div> -->
 		<div class="row">
 			<div class="col-xs-12 col-sm-8">
-				<div class="transparent-background padded">
+				<div class="transparent-background padded top-buffer">
 					<h2 class="fancy-header">Bad luck George!</h2>
 					<h4>You crushed a lot of pesky protests, which wins you a 
 						top table seat at Cuadrilla’s next society ball, but sadly isn’t 
@@ -55,6 +55,8 @@
 											<li>99% of respondents to a Government consultation opposed changes to the trespass law to allow drilling under people’s homes. Democr… oh what’s the point.</li>
 											<li>Just 25% of people say they support fracking (25% isn’t a majority, George - you’re supposed to be a numbers man!) and only 10% when it’s proposed near their homes </li>
 											<li>Three times as many people say they'd prefer to live near a wind farm than a fracking rig. Rather makes a mockery of all your anti-wind huffing and puffing, eh?</li>
+											<li>Know when you’re beaten, George. You’ll never defeat the amazing group of grandmothers standing up to your frackhead buddies.</li>
+											<li>Scotland has blocked fracking, Wales says it might. Germany, France and the Netherlands all have bans and even Denton, Texas, the birthplace of fracking, has changed it’s mind. You’re fracking the wrong horse, George. Giddy-up!</li>
 										</ul>
 									</div>
 								</div>
@@ -90,25 +92,11 @@
 									<ul>
 										<li>What’s that? New York banned fracking altogether after the Public Health Commissioner found “serious health risks”? Don’t they have private healthcare for that sort of thing?</li>
 										<li>Breast Cancer UK has concerns about the potentially adverse health effects of increased exposure to harmful fracking chemicals. But hey, fracking’s big and VERY clever.</li>
+										<li>Earthquakes! You’ve done your best to slip this one under the carpet, but the only fracking yet to take place in the UK was the likely cause of earthquakes in Blackpool in 2011. Who cares about the desolate north though? They don’t even have a London up there!</li>
 									</ul>
 								</div>
 							</div>
-						</div><div class="panel panel-default">
-						<div class="panel-heading" role="tab" id="headingFour">
-							<h4 class="panel-title">
-								<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-									Earthquakes!
-								</a>
-							</h4>
 						</div>
-						<div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-							<div class="panel-body">
-								<ul>
-									<li>You’ve done your best to slip this one under the carpet, but the only fracking yet to take place in the UK was the likely cause of earthquakes in Blackpool in 2011. Who cares about the desolate north though? They don’t even have a London up there!</li>
-								</ul>
-							</div>
-						</div>
-					</div>
 					<div class="panel panel-default">
 						<div class="panel-heading" role="tab" id="headingFive">
 							<h4 class="panel-title">
@@ -125,41 +113,6 @@
 							</div>
 						</div>
 					</div>
-					<div class="panel panel-default">
-						<div class="panel-heading" role="tab" id="headingSix">
-							<h4 class="panel-title">
-								<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-									Lessons from around the world
-								</a>
-							</h4>
-						</div>
-						<div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
-							<div class="panel-body">
-								<ul>
-									<li>Scotland has blocked fracking, Wales says it might. Germany, France and the Netherlands all have bans and even Denton, Texas, the birthplace of fracking, has changed it’s mind. You’re fracking the wrong horse, George. Giddy-up!</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="panel panel-default">
-						<div class="panel-heading" role="tab" id="headingSeven">
-							<h4 class="panel-title">
-								<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-									The ‘nannas’ of Lancashire
-								</a>
-							</h4>
-						</div>
-						<div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
-							<div class="panel-body">
-								<ul>
-									<li>Know when you’re beaten, George. You’ll never defeat the amazing group of grandmothers standing up to your frackhead buddies.</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-
-
-
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-3 text-center">
@@ -172,7 +125,6 @@
 		</div>
 		<div class="row">
 		</div>
-
 	</div>
 </body>
 </html>
