--- a/frack-a-mole.html
+++ b/frack-a-mole.html
@@ -17,6 +17,12 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<style>
+	body { 
+		background: none;
+  background-color:#D7EFEF; 
+}
+</style>
 </head>
 <body>
 	<div class="container">
