Tweaked play again button

--- a/thanks.html
+++ b/thanks.html
@@ -4,23 +4,23 @@
 	<meta charset="UTF-8">
 	<title>Frack-A-Mole</title>
 	<META NAME="Title" CONTENT="Frack-a-Mole: Squash dissent while maximising profits!">
-<META NAME="Author" CONTENT="HackChange">
-<META NAME="Description" CONTENT="Time to squash local protests and ignore environmental concerns, while generating profits for your cronies - time for Frack-A-Mole!">
-<META NAME="Keywords" CONTENT="fracking, frack, UK, protest, climate change, George Osborne, Cuadrilla">
-<META HTTP-EQUIV="Content-Language" CONTENT="en">
-<META HTTP-EQUIV="Creation-Date" CONTENT="30-01-2015">
-<META HTTP-EQUIV="Version" CONTENT="0.1">
-<META HTTP-EQUIV="Page URL" CONTENT="www.frack-a-mole.co.uk">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/normalize.css" media="all" />
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
-	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css" media="all" />
-	<link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-</head>
-<body>
-	<div class="container">
+		<META NAME="Author" CONTENT="HackChange">
+			<META NAME="Description" CONTENT="Time to squash local protests and ignore environmental concerns, while generating profits for your cronies - time for Frack-A-Mole!">
+				<META NAME="Keywords" CONTENT="fracking, frack, UK, protest, climate change, George Osborne, Cuadrilla">
+					<META HTTP-EQUIV="Content-Language" CONTENT="en">
+						<META HTTP-EQUIV="Creation-Date" CONTENT="30-01-2015">
+							<META HTTP-EQUIV="Version" CONTENT="0.1">
+								<META HTTP-EQUIV="Page URL" CONTENT="www.frack-a-mole.co.uk">
+									<meta name="viewport" content="width=device-width, initial-scale=1">
+									<link rel="stylesheet" type="text/css" href="css/normalize.css" media="all" />
+									<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
+									<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css" media="all" />
+									<link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
+									<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+									<script src="js/bootstrap.min.js"></script>
+								</head>
+								<body>
+									<div class="container">
 <!-- 		<div class="row" id="top-bar">
 			<div class="col-xs-12" style="text-align: right;">
 				<div class="inline">
@@ -35,6 +35,9 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-8">
 				<div class="transparent-background padded top-buffer">
+				<div class="col-xs-12 play-button">
+				<a href="frack-a-mole.html" class="btn btn-success" style="font-size: 300%;">PLAY AGAIN</a>
+				</div>
 					<h2 class="fancy-header">Bad luck George!</h2>
 					<h4>You crushed a lot of pesky protests, which wins you a 
 						top table seat at Cuadrilla’s next society ball, but sadly isn’t 
@@ -97,34 +100,34 @@
 								</div>
 							</div>
 						</div>
-					<div class="panel panel-default">
-						<div class="panel-heading" role="tab" id="headingFive">
-							<h4 class="panel-title">
-								<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-									Jobs, or the lack of them
-								</a>
-							</h4>
-						</div>
-						<div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
-							<div class="panel-body">
-								<ul>
-									<li>People want real jobs George, lots of them. Insulating homes in the North West could create nearly 10 000 jobs in 5 years, for instance. Whereas your bluds at Cuadrilla say the 6-year fracking project proposed in Lancashire would muster up just 11 jobs per site. I know you like the number 11, George, but come on.</li>
-								</ul>
+						<div class="panel panel-default">
+							<div class="panel-heading" role="tab" id="headingFive">
+								<h4 class="panel-title">
+									<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+										Jobs, or the lack of them
+									</a>
+								</h4>
+							</div>
+							<div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
+								<div class="panel-body">
+									<ul>
+										<li>People want real jobs George, lots of them. Insulating homes in the North West could create nearly 10 000 jobs in 5 years, for instance. Whereas your bluds at Cuadrilla say the 6-year fracking project proposed in Lancashire would muster up just 11 jobs per site. I know you like the number 11, George, but come on.</li>
+									</ul>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="col-xs-12 col-sm-3 text-center">
-				<div>
-					<br><br>
-					<img src="images/george-osborne-looking-evil.png">
+				<div class="col-xs-12 col-sm-3 text-center">
+					<div>
+						<br><br>
+						<img src="images/george-osborne-looking-evil.png">
+					</div>
 				</div>
+				<div class="one column">&nbsp;</div>
 			</div>
-			<div class="one column">&nbsp;</div>
+			<div class="row">
+			</div>
 		</div>
-		<div class="row">
-		</div>
-	</div>
-</body>
-</html>
+	</body>
+	</html>
