Updated speed, moving on hover

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</div>
 	<div class="row top-buffer">
 		<div class="col-xs-12 col-sm-2 col-sm-offset-5 play-button">
-			<a href="frack-a-mole.html" class="btn btn-success" style="font-size: 500%;">PLAY</a>
+			<a href="frack-a-mole" class="btn btn-success" style="font-size: 500%;">PLAY</a>
 		</div>
 	</div>
 	<div class="row">
