--- a/thanks.html
+++ b/thanks.html
@@ -36,7 +36,7 @@
 			<div class="col-xs-12 col-sm-8">
 				<div class="transparent-background padded top-buffer">
 				<div class="col-xs-12 play-button">
-				<a href="frack-a-mole.html" class="btn btn-success" style="font-size: 300%;">PLAY AGAIN</a>
+				<a href="frack-a-mole" class="btn btn-success" style="font-size: 300%;">PLAY AGAIN</a>
 				</div>
 					<h2 class="fancy-header">Bad luck George!</h2>
 					<h4>You crushed a lot of pesky protests, which wins you a 
@@ -58,7 +58,7 @@
 											<li>99% of respondents to a Government consultation opposed changes to the trespass law to allow drilling under people’s homes. Democr… oh what’s the point.</li>
 											<li>Just 25% of people say they support fracking (25% isn’t a majority, George - you’re supposed to be a numbers man!) and only 10% when it’s proposed near their homes </li>
 											<li>Three times as many people say they'd prefer to live near a wind farm than a fracking rig. Rather makes a mockery of all your anti-wind huffing and puffing, eh?</li>
-											<li>Know when you’re beaten, George. You’ll never defeat the amazing group of grandmothers standing up to your frackhead buddies.</li>
+											<li>Know when you’re beaten, George. You’ll never defeat the amazing group of Lancashire grandmothers standing up to your frackhead buddies.</li>
 											<li>Scotland has blocked fracking, Wales says it might. Germany, France and the Netherlands all have bans and even Denton, Texas, the birthplace of fracking, has changed it’s mind. You’re fracking the wrong horse, George. Giddy-up!</li>
 										</ul>
 									</div>
