Updated with butttons

--- a/thanks.html
+++ b/thanks.html
@@ -35,9 +35,13 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-8">
 				<div class="transparent-background padded top-buffer">
-				<div class="col-xs-12 play-button">
-				<a href="frack-a-mole" class="btn btn-success" style="font-size: 150%;">PLAY AGAIN</a>
-				</div>
+					<div class="col-xs-12 play-button">
+						<a href="frack-a-mole" class="btn btn-success" style="font-size: 150%;">PLAY AGAIN</a>
+						<h4 class="top-buffer">Share Frack-a-mole!:
+							<a href="https://twitter.com/home?status=Can%20you%20%23frack%20where%20%40george_osborne%20has%20failed?%20www.frack-a-mole.co.uk%20"><img src="images/Twitter.png"></a>
+							<img src="images/Facebook.png">
+						</h4>
+					</div>
 					<h2 class="fancy-header">Bad luck George!</h2>
 					<h4>You crushed a lot of pesky protests, which wins you a 
 						top table seat at Cuadrilla’s next society ball, but sadly isn’t 
