Updated speed tweaks

--- a/thanks.html
+++ b/thanks.html
@@ -37,7 +37,7 @@
 				<div class="transparent-background padded top-buffer">
 					<div class="col-xs-12 play-button">
 						<a href="frack-a-mole" class="btn btn-success" style="font-size: 150%;">PLAY AGAIN</a>
-						<h4 class="top-buffer">Share Frack-a-mole!
+						<h4 class="top-buffer">Share Frack-a-mole!<br><br>
 							<a href="https://twitter.com/home?status=Can%20you%20%23frack%20where%20%40george_osborne%20has%20failed?%20www.frack-a-mole.co.uk%20" alt="Share Frack-a-Mole on Twitter"><img src="images/Twitter.png"></a>
 							<a href="http://hrefshare.com/9a9e7" alt="Share Frack-a-mole on Facebook"><img src="images/Facebook.png"></a>
 						</h4>
